logs/pingo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pingo'...
Listing './lib/python3.5/site-packages/pingo/arduino'...
Listing './lib/python3.5/site-packages/pingo/arduino/tests'...
Listing './lib/python3.5/site-packages/pingo/bbb'...
Listing './lib/python3.5/site-packages/pingo/bbb/tests'...
Listing './lib/python3.5/site-packages/pingo/detect'...
Listing './lib/python3.5/site-packages/pingo/detect/tests'...
Listing './lib/python3.5/site-packages/pingo/ghost'...
Listing './lib/python3.5/site-packages/pingo/ghost/tests'...
Listing './lib/python3.5/site-packages/pingo/pcduino'...
Listing './lib/python3.5/site-packages/pingo/pcduino/tests'...
Listing './lib/python3.5/site-packages/pingo/pinGUIm'...
Listing './lib/python3.5/site-packages/pingo/rpi'...
Listing './lib/python3.5/site-packages/pingo/rpi/spi'...
Compiling './lib/python3.5/site-packages/pingo/rpi/spi/mcp3008.py'...
***   File "./lib/python3.5/site-packages/pingo/rpi/spi/mcp3008.py", line 68
    print display.format(count, res, volts, ticks)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pingo/rpi/tests'...
Listing './lib/python3.5/site-packages/pingo/test'...
Listing './lib/python3.5/site-packages/pingo/test/level0'...
Listing './lib/python3.5/site-packages/pingo/test/level1'...
Listing './lib/python3.5/site-packages/pingo/udoo'...
Listing './lib/python3.5/site-packages/pingo/udoo/tests'...
Listing './lib/python3.5/site-packages/pingo-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
